updated on layout

--- a/src/components/ChatInterface.module.css
+++ b/src/components/ChatInterface.module.css
@@ -26,4 +26,12 @@
   .sendMessageButton:hover {
     background-color: #0056b3;
   }
+
+  .messageAi{
+    text-align: right;
+  }
+
+  .messageUser {
+    text-align: left;
+  }
   
