--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,8 +12,10 @@
 }
 
 .subtitle {
+    display:inline-flex;
     font-style: italic;
     font-size: 2em;
+    background-color: #fafafa;
 }
 
 .searchBar {
