ai generated overview

--- a/src/components/ChatInterface.module.css
+++ b/src/components/ChatInterface.module.css
@@ -29,9 +29,11 @@
 
   .messageAi{
     text-align: right;
+    background-color: #fafafa;
   }
 
   .messageUser {
     text-align: left;
+    background-color: #fafafa;
   }
   
